# envsec

./: .gitignore  README.md  pyproject.toml
.chore/: add_type_stubs_for_optional_deps_3.md  update_.gitignore_23.md
.github/workflows/: ci.yml
docs/: README.md  update_README_installation_instructions_8.md
envsec/: __init__.py  checks.py  cli.py  report.py  scanner.py
src/: add_Telegram_notification_integration_1.py  add_Telegram_notification_integration_7.py  add_WebSocket_health_check_endpoint_14.py  add_WebSocket_health_check_endpoint_19.py  add_WebSocket_health_check_endpoint_25.py  add_config_hot-reload_support_2.py  add_service_version_fingerprinting_16.py  batch_database_writes_to_reduce_I_O_12.py  connection_timeout_not_respected_18.py  connection_timeout_not_respected_27.py  extract_configuration_validation_logic_5.py  implement_CVE_matching_engine_28.py  implement_concurrent_scan_worker_pool_13.py  implement_subdomain_enumeration_module_20.py  incorrect_CVE_severity_score_mapping_4.py  merge_result_formatters_into_single_modu_26.py  missing_Content-Type_header_in_API_calls_15.py  reduce_memory_for_large_scan_results_6.py  remove_deprecated_API_v1_endpoints_22.py  split_monolithic_cli.py_into_subcommands_11.py  split_monolithic_cli.py_into_subcommands_21.py  unify_error_handling_across_modules_29.py
src/api/: constants.py
src/cli/: __init__.py  color_output_toggle.py
src/config/: __init__.py  config_file_hot-reload.py
src/core/: __init__.py  utils.py
src/engine/: utils.py
src/monitor/: WebSocket_health_check_endpoint.py  __init__.py
src/reporter/: utils.py
src/scheduler/: __init__.py  distributed_task_queue_with_priority_levels.py  (+1 more)
tests/: test_add_stress_test_for_concurrent_scans_10.py  test_add_stress_test_for_concurrent_scans_24.py  test_envsec.py  test_scanner.py
