[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "envsec"
version = "0.2.0"
description = "envsec - security and monitoring tool"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.8",
]

[project.scripts]
envsec = "src.cli:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
