[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "envsec"
version = "0.1.0"
description = "CLI tool to audit your development environment for security misconfigurations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
envsec = "envsec.cli:main"

[tool.setuptools.packages.find]
include = ["envsec*"]
